<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginTop="5dp"
    android:id="@+id/basic_weather_card"
    android:background="@drawable/custom_flat_shape">
    <!-- Health status -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp">
        <LinearLayout
            android:id="@+id/container_health_status"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="15dp"
            android:background="@drawable/custom_weather_bad">
            <ImageView
                android:id="@+id/img_health_status"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/weather_bad"/>
        </LinearLayout>

        <!-- Place status -->
        <LinearLayout
            android:id="@+id/container_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/container_health_status"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_place"
                android:textColor="@color/black"
                android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="PM2.5"
                        android:textColor="@color/faded_text"
                        android:textSize="16dp"/>
                    <TextView
                        android:id="@+id/txt_pollutant_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:text="2.4"
                        android:textColor="@color/faded_text"
                        android:textSize="16dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PM25"
                        android:textColor="@color/faded_text"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </LinearLayout>
        </LinearLayout>

        <!-- Air quality status -->
        <TextView
            android:id="@+id/txt_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:background="@drawable/custom_weather_bad"
            android:text="@string/bad_weather_status"
            android:textColor="@color/white"
            android:textSize="16dp"/>
    </RelativeLayout>
</LinearLayout>